@@ -131,6 +131,3 @@ Read handling: interleaving, splitting, etc.
 
 .. autoprogram:: split-paired-reads:get_parser()
         :prog: split-paired-reads.py
-
-.. autoprogram:: sweep-reads:get_parser()
-        :prog: sweep-reads.py
