@@ -1,3 +1,11 @@
+2014-06-15  Titus Brown  <t@idyll.org>
+
+    * doc/scripts.txt: removed sweep-reads.py from script documentation.
+    * scripts/sweep-reads.py, scripts/sweep-files.py: moved sweep-reads.py
+	and sweep-files.py over to sandbox.
+    * tests/test_sandbox_scripts.py: created a test file for scripts in
+	sandbox/.
+
 2014-06-14  Titus Brown  <t@idyll.org>
 
     * doc/scripts.txt, tests/test_scripts.py, scripts/sweep-reads.py:
